--- a/app/app.html
+++ b/app/app.html
@@ -7,7 +7,7 @@
   </form>
   <br>
 
-  <!-- Nav tabs -->
+  <!-- Navigation tabs -->
   <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active"><a href="#experimental" aria-controls="experimental" role="tab" data-toggle="tab">Experimental</a></li>
     <li role="presentation"><a href="#predicted" aria-controls="predicted" role="tab" data-toggle="tab">Predicted</a></li>
