Returns predicted data as well.

--- a/app/app.html
+++ b/app/app.html
@@ -16,9 +16,9 @@
 
   <!-- Tab panes -->
   <div class="tab-content">
-    <div role="tabpanel" class="tab-pane fade in active" id="experimental"><div id="experimental-table"></div></div>
-    <div role="tabpanel" class="tab-pane fade" id="predicted">Predicted</div>
-    <div role="tabpanel" class="tab-pane fade" id="hotspots">Hotspots</div>
+    <div role="tabpanel" class="tab-pane fade in active" id="experimental"></div>
+    <div role="tabpanel" class="tab-pane fade" id="predicted"></div>
+    <div role="tabpanel" class="tab-pane fade" id="hotspots"></div>
   </div>
 
 
