Renamed HTML IDs.
Added 'phosphat_' to all IDs so my app won't interfere with other ones.

--- a/app/app.html
+++ b/app/app.html
@@ -3,22 +3,22 @@
 
   <form>
     Transcript ID: <input type="text" name="transcript_input">
-    <button type="button" id="searchButton">Search</button>
+    <button type="button" id="phosphat_searchButton">Search</button>
   </form>
   <br>
 
   <!-- Navigation tabs -->
   <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#experimental" aria-controls="experimental" role="tab" data-toggle="tab">Experimental</a></li>
-    <li role="presentation"><a href="#predicted" aria-controls="predicted" role="tab" data-toggle="tab">Predicted</a></li>
-    <li role="presentation"><a href="#hotspots" aria-controls="hotspots" role="tab" data-toggle="tab">Hotspots</a></li>
+    <li role="presentation" class="active"><a href="#phosphat_experimental" aria-controls="experimental" role="tab" data-toggle="tab">Experimental</a></li>
+    <li role="presentation"><a href="#phosphat_predicted" aria-controls="predicted" role="tab" data-toggle="tab">Predicted</a></li>
+    <li role="presentation"><a href="#phosphat_hotspots" aria-controls="hotspots" role="tab" data-toggle="tab">Hotspots</a></li>
   </ul>
 
   <!-- Tab panes -->
   <div class="tab-content">
-    <div role="tabpanel" class="tab-pane fade in active" id="experimental"></div>
-    <div role="tabpanel" class="tab-pane fade" id="predicted"></div>
-    <div role="tabpanel" class="tab-pane fade" id="hotspots"></div>
+    <div role="tabpanel" class="tab-pane fade in active" id="phosphat_experimental"></div>
+    <div role="tabpanel" class="tab-pane fade" id="phosphat_predicted"></div>
+    <div role="tabpanel" class="tab-pane fade" id="phosphat_hotspots"></div>
   </div>
 
 
