Active tab now automatically changes.

--- a/app/app.html
+++ b/app/app.html
@@ -13,9 +13,9 @@
   <br>
   <!-- Navigation tabs -->
   <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#phosphat_experimental" aria-controls="experimental" role="tab" data-toggle="tab">Experimental</a></li>
-    <li role="presentation"><a href="#phosphat_predicted" aria-controls="predicted" role="tab" data-toggle="tab">Predicted</a></li>
-    <li role="presentation"><a href="#phosphat_hotspots" aria-controls="hotspots" role="tab" data-toggle="tab">Hotspots</a></li>
+    <li role="presentation" id="phosphat_exp-tab"><a href="#phosphat_experimental" aria-controls="experimental" role="tab" data-toggle="tab">Experimental</a></li>
+    <li role="presentation" id="phosphat_pred-tab"><a href="#phosphat_predicted" aria-controls="predicted" role="tab" data-toggle="tab">Predicted</a></li>
+    <li role="presentation" id="phosphat_hot-tab"><a href="#phosphat_hotspots" aria-controls="hotspots" role="tab" data-toggle="tab">Hotspots</a></li>
   </ul>
 
   <!-- Tab panes -->
