--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
   <!-- bower:css -->
   <link rel="stylesheet" href="bower_components/DataTables/media/css/jquery.dataTables.css" />
+  <link rel="stylesheet" href="bower_components/datatables/media/css/jquery.dataTables.css" />
+  <link rel="stylesheet" href="bower_components/datatables-colreorder/css/dataTables.colReorder.css" />
   <!-- endbower-->
 
   <style type="text/css">
@@ -76,6 +78,8 @@
 
   <!-- bower:js -->
   <script src="bower_components/DataTables/media/js/jquery.dataTables.js"></script>
+  <script src="bower_components/datatables/media/js/jquery.dataTables.js"></script>
+  <script src="bower_components/datatables-colreorder/js/dataTables.colReorder.js"></script>
   <!-- endbower -->
 
   <!-- application code -->
