--- a/app/app.html
+++ b/app/app.html
@@ -38,7 +38,7 @@
       <a href="http://phosphat.uni-hohenheim.de" target="_blank"><img src="http://i57.tinypic.com/2dh6y4h.png" id="phos_logo" alt="PhosPhAt Logo"></a>
 
       <a href="http://phosphat.uni-hohenheim.de" target="_blank"><h3>PhosPhAt Website</h3></a>
-      <h4>This app displays tables containing data, obtained from PhosPhAt, regarding protein phosphorylation sites. There is a table in each tab, and upon entering a transcript identifier, all three tables are populated with data. The "Experimental" tab displays phosphorylation sites that were experimentally determined. The "Predicted" tab displays phosphorylation sites that was computationally predicted. Lastly, the "Hotspots" tab displays computationally predicted phosphorylation hotspots. </h4>
+      <h4>This app displays tables containing data, obtained from PhosPhAt, regarding protein phosphorylation sites. There is a table in each tab, and upon entering a transcript identifier, all three tables are populated with data. The "Experimental" tab displays phosphorylation sites that were experimentally determined. The "Predicted" tab displays phosphorylation sites that were computationally predicted. Lastly, the "Hotspots" tab displays computationally predicted phosphorylation hotspots. </h4>
       <blockquote>
         <p>The Arabidopsis Protein Phosphorylation Site Database (PhosPhAt 4.0) contains information on Arabidopsis phosphorylation sites which were identified by mass spectrometry in large scale experiments by different research groups. Specific information about the peptide properties, their annotated biological function as well as the experimental and analytical context is given. . . . The PhosPhAt service has a built-in plant specific phosphorylation site predictor trained on the experimental dataset for Serine, threonine and tyrosine phosphorylation.</p>
         <footer>The Arabidopsis Protein Phosphorylation Site Database (PhosPhAt)</footer>
@@ -73,7 +73,7 @@
       <h4>
         To get started, enter a transcript identifier in the input field labeled "Transcript ID". An example of a valid transcript ID is provided below the search box. Once the search button is clicked the tables in all three tabs will be loaded with data. Next to each tab name is the number of data entries that table contains. You can click on any of the tabs to view that table.
         <br><br>
-        Additonal Features:</h4>
+        Additional Features:</h4>
         <ul>
           <li>Typing in the upper-right input field labeled "Narrow results:" allows for the data in that table to be searched.</li>
           <li>Clicking the table headers allows the table to be sorted in ascending or descending order.</li>
