Minor UI tweaks.

--- a/app/app.html
+++ b/app/app.html
@@ -3,7 +3,7 @@
 
   <form>
   Transcript ID: <input type="text" name="phosphat_transcript-input">
-  <button type="button" id="phosphat_searchButton">Search</button>
+  <button type="button" id="phosphat_searchButton" class="btn btn-success">Search</button>
   <h6><i>Example value: AT1G01540.1</i></h6>
   </form>
   <div id="phosphat_error"></div>
