--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="bower_components/DataTables/media/css/jquery.dataTables.css" />
   <link rel="stylesheet" href="bower_components/datatables/media/css/jquery.dataTables.css" />
   <link rel="stylesheet" href="bower_components/datatables-colreorder/css/dataTables.colReorder.css" />
+  <link rel="stylesheet" href="bower_components/datatables-bootstrap3/BS3/assets/css/datatables.css" />
   <!-- endbower-->
 
   <style type="text/css">
@@ -80,6 +81,7 @@
   <script src="bower_components/DataTables/media/js/jquery.dataTables.js"></script>
   <script src="bower_components/datatables/media/js/jquery.dataTables.js"></script>
   <script src="bower_components/datatables-colreorder/js/dataTables.colReorder.js"></script>
+  <script src="bower_components/datatables-bootstrap3/BS3/assets/js/datatables.js"></script>
   <!-- endbower -->
 
   <!-- application code -->
