Added support for search by pressing enter.

--- a/app/app.html
+++ b/app/app.html
@@ -1,9 +1,9 @@
 <div class="science-app" data-app-name="phosphorylation-app">
   <h2>Phosphorylation Data</h2>
 
-  <form>
+  <form id="phosphat_search">
   Transcript ID: <input type="text" name="phosphat_transcript-input">
-  <button type="button" id="phosphat_searchButton" class="btn btn-success">Search</button>
+  <button type="submit" id="phosphat_searchButton" class="btn btn-success">Search</button>
   <h6><i>Example value: AT1G01540.1</i></h6>
   </form>
   <div id="phosphat_error"></div>
