Added a reset/clear button. Fixed some comments.

--- a/app/app.html
+++ b/app/app.html
@@ -4,6 +4,7 @@
   <form id="phosphat_search">
   Transcript ID: <input type="text" name="phosphat_transcript-input">
   <button type="submit" id="phosphat_searchButton" class="btn btn-success">Search</button>
+  <button type="button" id="phosphat_clearButton" class="btn btn-danger">Clear</button>
   <h6><i>Example value: AT1G01540.1</i></h6>
   </form>
   <div id="phosphat_error"></div>
