Added dropdown for protein sequence.

--- a/app/app.html
+++ b/app/app.html
@@ -9,8 +9,14 @@
   </form>
   <div id="phosphat_error"></div>
   <div id="phosphat_protein-seq-cont">
-  <h5>Protein Sequence:</h5>
-  <div id="phosphat_protein-seq"></div></div>
+
+  <h5>Protein Sequence:
+    <button type="button" class="btn btn-link btn-xs" data-toggle="collapse" data-target="#phosphat_protein-seq" aria-expanded="false" aria-controls="phosphat_protein-seq">
+      <span class="glyphicon glyphicon-collapse-down"></span>
+    </button>
+  </h5>
+
+  <div id="phosphat_protein-seq" class="collapse"></div></div>
   <br>
   <!-- Navigation tabs -->
   <ul class="nav nav-tabs" role="tablist">
