Fixed bug with exp hotspots table

--- a/app/app.html
+++ b/app/app.html
@@ -1,7 +1,7 @@
 <div class="science-app" data-app-name="phosphorylation-app">
   <h2>Phosphorylation Data</h2>
 
-  <form id="transcriptSearch">
+  <form id="searchForm">
   Transcript ID: <input type="text" name="transcriptInput">
   <button type="submit" id="searchButton" class="btn btn-success">Search</button>
   <button type="button" id="clearButton" class="btn btn-danger">Clear</button>
