Fixed typos in instructions.

--- a/app/app.html
+++ b/app/app.html
@@ -70,7 +70,7 @@
       <a href="http://phosphat.uni-hohenheim.de" target="_blank"><img src="http://i57.tinypic.com/2dh6y4h.png" id="logo" alt="PhosPhAt Logo"></a>
 
       <a href="http://phosphat.uni-hohenheim.de" target="_blank"><h3>PhosPhAt Website</h3></a>
-      <h4>This app displays tables containing data, obtained from PhosPhAt, regarding protein phosphorylation sites. There is a table in each tab, and upon entering a transcript identifier, all three tables are populated with data. The "Experimental Sites" tab displays phosphorylation sites that were experimentally determined. The "Predicted Sites" tab displays phosphorylation sites that were computationally predicted. The "Experimental Hotspots" tab displays experimentally determined phosphorylation hotspots. Lastly, the "Predicted Hotspots" tab displays computationally predicted phosphorylation hotspots.</h4>
+      <h4>This app displays tables containing data, obtained from PhosPhAt, regarding protein phosphorylation sites. There is a table in each tab, and upon entering a transcript identifier, all four tables are populated with data. The "Experimental Sites" tab displays phosphorylation sites that were experimentally determined. The "Predicted Sites" tab displays phosphorylation sites that were computationally predicted. The "Experimental Hotspots" tab displays experimentally determined phosphorylation hotspots. Lastly, the "Predicted Hotspots" tab displays computationally predicted phosphorylation hotspots.</h4>
       <blockquote>
         <p>The Arabidopsis Protein Phosphorylation Site Database (PhosPhAt 4.0) contains information on Arabidopsis phosphorylation sites which were identified by mass spectrometry in large scale experiments by different research groups. Specific information about the peptide properties, their annotated biological function as well as the experimental and analytical context is given. . . . The PhosPhAt service has a built-in plant specific phosphorylation site predictor trained on the experimental dataset for Serine, threonine and tyrosine phosphorylation.</p>
         <footer>The Arabidopsis Protein Phosphorylation Site Database (PhosPhAt)</footer>
@@ -103,7 +103,7 @@
       </blockquote>
       <h3>Instructions:</h3>
       <h4>
-        To get started, enter a transcript identifier in the input field labeled "Transcript ID". An example of a valid transcript ID is provided below the search box. Once the search button is clicked the tables in all three tabs will be loaded with data. Next to each tab name is the number of data entries that table contains. You can click on any of the tabs to view that table.
+        To get started, enter a transcript identifier in the input field labeled "Transcript ID". An example of a valid transcript ID is provided below the search box. Once the search button is clicked the tables in all four tabs will be loaded with data. Next to each tab name is the number of data entries that table contains. You can click on any of the tabs to view that table.
         <br><br>
         Additional Features:</h4>
         <ul>
