--- a/app/app.html
+++ b/app/app.html
@@ -114,7 +114,7 @@
         </ul>
         <h4>Possible Issues:</h4>
         <ul>
-          <li>A valid transcript ID is composed of a locus ID  and a number identifying its isomer. For example, AT1G01540.1 and AT1G01540.2 are both valid transcript IDs with the same locus ID (AT1G01540). </li>
+          <li>A valid transcript ID is composed of a locus ID and a number identifying its isoform. For example, AT1G01540.1 and AT1G01540.2 are both valid transcript IDs with the same locus ID (AT1G01540). </li>
           <li>If an invalid transcript ID is entered a red error message is displayed below the search box.</li>
           <li>A transcript ID may return data for one, all, or none of the tabs. If a table has zero entries, it means no data was returned.</li>
         </ul>
