updated version of DataTables

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 
   <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/DataTables/media/css/jquery.dataTables.css" />
-  <link rel="stylesheet" href="bower_components/datatables/media/css/jquery.dataTables.css" />
-  <link rel="stylesheet" href="bower_components/datatables-colreorder/css/dataTables.colReorder.css" />
-  <link rel="stylesheet" href="bower_components/datatables-bootstrap3/BS3/assets/css/datatables.css" />
+  <link rel="stylesheet" href="bower_components/datatables.net-bs/css/dataTables.bootstrap.css" />
+  <link rel="stylesheet" href="bower_components/datatables.net-colreorder-bs/css/colReorder.bootstrap.css" />
   <!-- endbower-->
 
   <style type="text/css">
@@ -78,10 +76,9 @@
   <script src="/lib/test-runner.js"></script>
 
   <!-- bower:js -->
-  <script src="bower_components/DataTables/media/js/jquery.dataTables.js"></script>
-  <script src="bower_components/datatables/media/js/jquery.dataTables.js"></script>
-  <script src="bower_components/datatables-colreorder/js/dataTables.colReorder.js"></script>
-  <script src="bower_components/datatables-bootstrap3/BS3/assets/js/datatables.js"></script>
+  <script src="bower_components/datatables.net/js/jquery.dataTables.js"></script>
+  <script src="bower_components/datatables.net-bs/js/dataTables.bootstrap.js"></script>
+  <script src="bower_components/datatables.net-colreorder/js/dataTables.colReorder.js"></script>
   <!-- endbower -->
 
   <!-- application code -->
